--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@next/font": "13.2.4",
     "@prisma/client": "^4.8.1",
     "@types/node": "18.15.11",
