--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://muizzjakhar:password@localhost:5432/next-restaurant-app"
+
+JWT_SECRET ="234234n2oern32nf2o3inff24on42nt2332tr"
