--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.0.11",
     "@types/validator": "^13.7.15",
     "bcrypt": "^5.1.0",
+    "jose": "^4.14.4",
     "next": "13.2.4",
     "prisma": "^4.8.1",
     "react": "18.2.0",
