--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@next/font": "13.2.4",
     "@prisma/client": "^4.8.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "@types/validator": "^13.7.15",
     "bcrypt": "^5.1.0",
     "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
     "prisma": "^4.8.1",
     "react": "18.2.0",
