--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "@types/validator": "^13.7.15",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "jose": "^4.14.4",
     "jsonwebtoken": "^9.0.0",
