--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/validator": "^13.7.15",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "cookies-next": "^2.1.1",
     "jose": "^4.14.4",
     "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
