--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "18.0.11",
     "@types/validator": "^13.7.15",
     "axios": "^1.4.0",
@@ -27,6 +28,7 @@
     "next": "13.2.4",
     "prisma": "^4.8.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.3",
     "validator": "^13.9.0"
