--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@
 /node_modules
 /.pnp
 .pnp.js
-
+/.env
 # testing
 /coverage
+
+.env
 
 # next.js
 /.next/
@@ -27,6 +29,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+
 
 # vercel
 .vercel
