--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },  
+  "engines": {
+    "node": "^16.18",
+    "npm": "8.19.2"
   },
   "dependencies": {
     "@emotion/react": "^11.10.8",
