--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  },  
+  },
   "engines": {
     "node": "^16.18",
     "npm": "8.19.2"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.8",
-    "@emotion/styled": "^11.10.8",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.2",
     "@next/font": "13.2.4",
     "@prisma/client": "^4.8.1",
     "@types/bcrypt": "^5.0.0",
