--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "next-restaurant-app",
   "version": "0.1.0",
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -20,7 +23,6 @@
     "@prisma/client": "^4.8.1",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "18.0.11",
@@ -36,12 +38,14 @@
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.3",
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/node": "^20.2.5",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
